// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Factory should provide theme config on the child function of EzThemeProvider 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#eee",
    }
  }
/>
`;

exports[`Factory should provide theme config on the child function of EzThemeProvider 2`] = `
<View
  style={
    Object {
      "backgroundColor": "#ff0000",
    }
  }
/>
`;

exports[`withTheme HOC should add theme props to the wrapped component 1`] = `
<View
  style={
    Object {
      "backgroundColor": "blue",
    }
  }
/>
`;
